# plcopen-runtime-py

./: .dockerignore  .gitignore  CMakeLists.txt  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
IEC61131-1/: README.md
IEC61131-1/PIDA/: H_PIDA.c  H_PIDA.h  PIDA.xml
cmake/: toolchain-arm.cmake
docker/: Dockerfile.arm  Dockerfile.dev
docs/: api-reference.md  architecture.md  benchmark-results.md  extending.md
include/plcopen/: fb_common.h  fb_first_order.h  fb_pid.h  fb_pida.h  plcopen.h
plcopen/: __init__.py
runtime/: __init__.py  config.py  debug.py  main.py  script_manager.py
scripts/: demo.py  demo_pida.py
specs/001-plcopen-runtime/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-plcopen-runtime/checklists/: requirements.md
specs/001-plcopen-runtime/contracts/: c-api.md  python-api.md
specs/002-pida-function-block/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-pida-function-block/checklists/: requirements.md
specs/002-pida-function-block/contracts/: c-api.md  python-api.md
src/common/: error.c  error.h  log.c  log.h
src/fb/: fb_registry.c  fb_registry.h  first_order.c  pid.c  pida.c
src/python/: plcopen_module.c  py_first_order.c  py_pid.c  py_pida.c
templates/: fb_template.c
tests/benchmark/: bench_first_order.c  bench_memory.c  bench_pid.c
tests/integration/: test_debug.py  test_runtime.py
tests/unit/c/: test_first_order.c  test_pid.c  test_pida.c  unity_config.h
tests/unit/python/: test_first_order.py  test_pid.py  test_pida.py  test_script_manager.py
